# Enverse-meets-BLE

./: .gitignore  CMakeLists.txt  enverse_ble_integrated.code-workspace  prj.conf
src/: 52dk.dts  algorithm.h  bma4.c  bma456.c  bma_sensor.c  bma_sensor.h  digitalPins.c  digitalPins.h  display.c  display.h  heart_algorithm.c  heart_algorithm.h  hts.c  hts.h  latchSensor.c  latchSensor.h  lcd.c  lcd.h  lightSensor.c  lightSensor.h  main.c  max30102.c  max30102.h  max30208.c  max30208.h  oled.c  spo2_algorithm.c  spo2_algorithm.h
